--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
             style="height: 96px"
           >
             <div>PAYLOADS</div>
-            <div class="xhost-payload__desc">---------------</div>
+            <div class="xhost-payload__desc">페이로드 메뉴 진입</div>
           </button>
           <button
             class="xhost__button xhost__button__payload xhost__intro-select"
             style="height: 96px"
           >
             <div>CACHED VERSION</div>
-            <div class="xhost-payload__desc">오프라인 캐쉬버젼 연결</div>
+            <div class="xhost-payload__desc">오프라인 캐쉬버젼 실행</div>
           </button>
         </div>
       </div>
@@ -166,7 +166,7 @@
       </div>
       <div id="app" class="section-container"></div>
     </div>
-    <div class="xhost__notification-XXntainer"></div>
+    <div class="xhost__notification-container"></div>
     <div class="xhost__cache">
       <div class="xhost__cache-title">캐쉬중</div>
       <div class="xhost__payload-autoload"></div>
